Fix blog content top spacing

--- a/stylesheets/blog-index-stylesheet.css
+++ b/stylesheets/blog-index-stylesheet.css
@@ -1,108 +1,1 @@
 
-#second_from_top {
-display: block;
-position: relative;
-top: 730px;
-left: 100px;
-}
-
-
-#third_from_top {
-display: block;
-position: relative;
-top: 740px;
-left: 100px;
-}
-
-#fourth_from_top {
-display: block;
-position: relative;
-top: 750px;
-left: 100px;
-}
-
-#fifth_from_top {
-display: block;
-position: relative;
-top: 760px;
-left: 100px;
-}
-
-#sixth_from_top {
-display: block;
-position: relative;
-top: 770px;
-left: 100px;
-}
-
-#seventh_from_top {
-display: block;
-position: relative;
-top: 780px;
-left: 100px;
-}
-
-#eighth_from_top {
-display: block;
-position: relative;
-top: 790px;
-left: 100px;
-}
-
-#ninth_from_top {
-display: block;
-position: relative;
-top: 800px;
-left: 100px;
-}
-
-#tenth_from_top {
-display: block;
-position: relative;
-top: 810px;
-left: 100px;
-}
-#eleventh_from_top {
-display: block;
-position: relative;
-top: 820px;
-left: 100px;
-}
-#twelfth_from_top {
-display: block;
-position: relative;
-top: 830px;
-left: 100px;
-}
-#thirteenth_from_top {
-display: block;
-position: relative;
-top: 840px;
-left: 100px;
-}
-
-#fourteenth_from_top {
-display: block;
-position: relative;
-top: 850px;
-left: 100px;
-}
-#fifteenth_from_top {
-display: block;
-position: relative;
-top: 860px;
-left: 100px;
-}
-#sixteenth_from_top {
-display: block;
-position: relative;
-top: 870px;
-left: 100px;
-}
-main {
-	display: block;
-	height: 100%;
-	padding-bottom: 880px;
-}
-
-
